[gd_scene load_steps=6 format=2]

[ext_resource path="res://theme/kenny/kenneyUI-yellow.tres" type="Theme" id=1]
[ext_resource path="res://gameover/game_over_panel.gd" type="Script" id=2]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 640, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "fold"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1.5, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 640, 360 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1.5, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "unfold"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1.5, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1.5, 1 ),
"update": 0,
"values": [ Vector2( 640, 360 ), Vector2( 0, 0 ) ]
}

[node name="GameOver" type="Control"]
margin_left = 640.0
margin_right = 1920.0
margin_bottom = 720.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Fold" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/fold = SubResource( 3 )
anims/unfold = SubResource( 4 )

[node name="BackGround" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -150.0
margin_right = 250.0
margin_bottom = 150.0
color = Color( 0.317647, 0.454902, 1, 0.705882 )

[node name="HBox" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -178.5
margin_top = 70.5
margin_right = 178.5
margin_bottom = 117.5
custom_constants/separation = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGame" type="Button" parent="HBox"]
margin_right = 163.0
margin_bottom = 57.251
size_flags_horizontal = 3
text = "NewGame"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Close" type="Button" parent="HBox"]
margin_left = 193.0
margin_right = 357.0
margin_bottom = 57.251
size_flags_horizontal = 3
text = "Close"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Result" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -279.0
margin_top = -90.0
margin_right = 280.0
margin_bottom = 69.0
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DelayTimer" type="Timer" parent="."]
one_shot = true

[connection signal="animation_finished" from="Fold" to="." method="_on_Fold_animation_finished"]
[connection signal="animation_started" from="Fold" to="." method="_on_Fold_animation_started"]
[connection signal="pressed" from="HBox/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="HBox/Close" to="." method="_on_Close_pressed"]
[connection signal="timeout" from="DelayTimer" to="." method="_on_DelayTimer_timeout"]
